# PythonProject5

./: .env_template  .gitignore  README.md  pyproject.toml
data/: Operations_Feb_01-28_2026.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
